--- a/css/css.css
+++ b/css/css.css
@@ -1,12 +1,261 @@
 *{ 
-
+    margin: 0;
 }
 
 #body{
     background-image: url(../img/background_bread.jpg);
-    
+   
 }
 
+
+/* MOBILE */
+@media only screen and (max-width: 1023px){
+    #navbar-btn {
+        z-index: 8;
+        width: 50px;
+        height: 50px;
+        background: url(../img/white-menu-icon-png-18.jpg);
+        background-size: contain;
+        
+    }
+
+    .navigation a {
+        display: none;
+        margin-left: 20px;
+    }
+
+    .navigation {
+        transition: font-size 0.2s;
+        font-size: 0;
+    }
+
+    .shown-navigation {
+        position: sticky;
+        background-color:rgb(73, 46, 28);
+        color: rosybrown;
+        z-index: 10;
+        display: flex;
+        flex-direction: column;
+        font-size: 8vh;
+    }
+
+    .shown-navigation a {
+        display: block;
+    }
+
+    #index{
+        display: grid;
+        width:100vw;
+        max-width:100%;
+        height:100vh;
+    
+        grid-template-areas:
+        'he'
+        'na'
+        'mai'
+        'fo';
+        grid-template-rows: 1fr 1fr 3fr auto;
+        grid-template-columns: 100%;
+    }
+
+    .om_oss {
+        width: 350px;
+    }
+
+    .oppetider{
+        width: 350px;
+    }
+
+    #sortiment{
+        display:grid;
+        width:100vw;
+        max-width:100%;
+        height:100vh;
+    
+        grid-template-areas:
+        'he'
+        'na'
+        'nas'
+        'mas'
+        'fo';
+        grid-template-rows: 2fr 1fr 1fr auto 0.1fr ;
+        grid-template-columns: 100%;
+    }
+
+    .main_sortiment{
+        width: 400px;
+    }
+
+    img{
+        width: 200px;
+    }
+
+    #kontakt{
+        display:grid;
+        width:100vw;
+        max-width:100%;
+        height:100vh;
+
+        grid-template-areas: 
+        "he"
+        "na"
+        "mak"
+        "fo";
+        grid-template-rows: 2fr 1fr 1fr auto 0.1fr ;
+        grid-template-columns: 100%; 
+
+    }
+
+    #catering{
+        display:grid;
+        width:100vw;
+        max-width:100%;
+        height:100vh;
+
+        grid-template-areas: 
+        "he"
+        "na"
+        "sc"
+        "fo";
+        grid-template-rows: 2fr 1fr auto 0.1fr ;
+        grid-template-columns: 100%; 
+
+    }
+
+    .main_cater{
+        width: 350px;
+    }
+
+    #catering2{
+        display:grid;
+        width:100vw;
+        max-width:100%;
+        height:100vh;
+
+        grid-template-areas: 
+        "he"
+        "na"
+        "cf"
+        "fo";
+        grid-template-rows: 2fr 1fr 1fr auto 0.1fr ;
+        grid-template-columns: 100%; 
+    
+    }
+    p{
+        font-size: larger;
+    }
+
+    section{
+        font-size:larger;
+    }
+}
+
+
+/* DESKTOP */
+@media only screen and (min-width: 1024px){
+    #index{
+        display: grid;
+        width:100vw;
+        max-width:100%;
+        height:100vh;
+        max-height: 100%;
+    
+        grid-template-areas:
+        'he' 
+        'na' 
+        'mai'
+        'fo'
+        ;
+        grid-template-rows: 1fr 1fr 3fr auto;
+        grid-template-columns: 100%;
+    
+    }
+
+    .navigation{
+        grid-area: na;
+        
+        background-color: rgb(73, 46, 28);
+        color: white;
+        padding: 10px;
+        height: 20px; 
+        margin-top: 10px; 
+        text-align: right;
+    
+    }
+
+    .om_oss {
+        width: 500px;
+    }
+
+    .navigation_button{
+        display:none;
+    }
+
+    
+
+    #sortiment{
+        display:grid;
+        width:100vw;
+        max-width:100%;
+        height:100vh;
+    
+        grid-template-areas:
+        'he' 
+        'na' 
+        'nas' 
+        'mas' 
+        'fo';
+        grid-template-rows: 2fr 1fr 1fr auto 0.1fr ;
+        grid-template-columns: 100%;
+    }
+
+    #kontakt{
+        display:grid;
+        width:100vw;
+        max-width:100%;
+        height:100vh;
+
+        grid-template-areas: 
+        "he"
+        "na"
+        "mak"
+        "fo";
+        grid-template-rows: 2fr 1fr 1fr auto 0.1fr ;
+        grid-template-columns: 100%; 
+
+    }
+
+    #catering{
+        display:grid;
+        width:100vw;
+        max-width:100%;
+        height:100vh;
+
+        grid-template-areas: 
+        "he"
+        "na"
+        "mac"
+        "fo";
+        grid-template-rows: 2fr 1fr 1fr auto 0.1fr ;
+        grid-template-columns: 100%; 
+
+    }
+
+    #catering2{
+        display:grid;
+        width:100vw;
+        max-width:100%;
+        height:100vh;
+
+        grid-template-areas: 
+        "he"
+        "na"
+        "mac2"
+        "fo";
+        grid-template-rows: 2fr 1fr 1fr auto 0.1fr ;
+        grid-template-columns: 100%; 
+    }
+}
 
 a {
     color: white;
@@ -30,17 +279,6 @@ a:hover
     
 }
 
-.navigation{
-    grid-area: na;
-    
-    background-color: rgb(73, 46, 28);
-    color: white;
-    padding: 10px;
-    height: 20px; 
-    margin-top: 10px; 
-    text-align: right;
-
-}
 
 .footer{
     grid-area: fo;
@@ -50,19 +288,15 @@ a:hover
     margin-top: 15px;
     padding: 15px;
     height: 20px;
-    
-
-
 }
 
 .main_index{
     max-width: 80%;
     
     grid-area: mai;
-
 }
 
-.öppetider{
+.oppetider{
     margin: 10px;
     padding: 5px;
     border-color:rgb(73, 46, 28);
@@ -73,6 +307,7 @@ a:hover
     width:300px;
     
     display:flex;
+    flex-wrap: wrap;
     text-align: center;
     justify-content: space-evenly;
 
@@ -80,6 +315,7 @@ a:hover
 
 h4 {
     text-align: center;
+    flex: 1 0 100%;
     
 }
 
@@ -100,7 +336,7 @@ h4 {
     border-width: 4px;
     border-radius: 2px;
     background-color: thistle;
-    width: 500px;
+    
     text-align: center;
 }
 
@@ -123,16 +359,10 @@ h4 {
     flex-wrap: wrap;
 
     grid-area: mas;
-
 }
 
 img{
     width: 400px;
-
-}
-
-p{
-    /*font-size: larger;*/
 }
 
 #mackor{
@@ -204,12 +434,10 @@ p{
     display:flex;
     align-content: space-around;
 
-    grid-area: mak;
-
-    
+    grid-area: mak;   
 }
 
-#info{
+.info{
     background-color: thistle;
     border-color:rgb(73, 46, 28);
     border-style:solid;
@@ -239,30 +467,23 @@ p{
     margin: 15px;
     padding: 15px;
     height: 300px;
-    
-    display:flex;
-    align-content: space-around;
-    flex-wrap: wrap;
 
-    grid-area: mac;
+    grid-area:mac;
 
 }
 
 .cater_info{
-    grid-area: sc;
 
     background-color: thistle;
     border-color:rgb(73, 46, 28);
     border-style:solid;
-    border-width: 4px;
-    border-radius: 2px;
-    width: 500px;
     text-align: center;
+    width: 300px;
 
 }
 
 .a_c{
-    color: rgb(39, 96, 122);
+    color: rgb(8, 25, 32);
     
     text-decoration: underline;
 }
@@ -283,7 +504,6 @@ p{
 }
 
 .cater_form{
-
     background-color: thistle;
     border-color:rgb(73, 46, 28);
     border-style:solid;
@@ -296,175 +516,3 @@ p{
 
 
 
-/* MOBILE */
-@media screen and (max-width: 1023px){
-    #index{
-        display: grid;
-        width:100vw;
-        max-width:100%;
-        height:100vh;
-    
-        grid-template-areas:
-        'he'
-        'na'
-        'mai'
-        'fo';
-        grid-template-rows: 20% 10% auto 20% ;
-        grid-template-columns: 100%;
-    }
-
-    #sortiment{
-        display:grid;
-        width:100vw;
-        max-width:100%;
-        height:100vh;
-    
-        grid-template-areas:
-        'he'
-        'na'
-        'nas'
-        'mas'
-        'fo';
-        grid-template-rows: 20% 10% 10% auto  20% ;
-        grid-template-columns: 100%;
-    }
-
-    #kontakt{
-        display:grid;
-        width:100vw;
-        max-width:100%;
-        height:100vh;
-
-        grid-template-areas: 
-        "he"
-        "na"
-        "mak"
-        "fo";
-        grid-template-rows: 20% 10% 10% auto 20% ;
-        grid-template-columns: 100%; 
-
-    }
-
-    #catering{
-        display:grid;
-        width:100vw;
-        max-width:100%;
-        height:100vh;
-
-        grid-template-areas: 
-        "he"
-        "na"
-        "sc"
-        "fo";
-        grid-template-rows: 20% 10% 10% auto 20% ;
-        grid-template-columns: 100%; 
-
-    }
-
-    #catering2{
-        display:grid;
-        width:100vw;
-        max-width:100%;
-        height:100vh;
-
-        grid-template-areas: 
-        "he"
-        "na"
-        "cf"
-        "fo";
-        grid-template-rows: 20% 10% 10% auto 20% ;
-        grid-template-columns: 100%; 
-
-}
-
-
-/* DESKTOP */
-@media screen and (min-width: 1024px){
-
-    .navigation_button{
-        display:none;
-    }
-
-    #index{
-        display: grid;
-        width:100vw;
-        max-width:100%;
-        height:100vh;
-    
-        grid-template-areas:
-        'he' 
-        'na' 
-        'mai'
-        'fo' ;
-        grid-template-rows: 20% 10% auto 20%;
-        grid-template-columns: 100%;
-    
-    }
-
-    #sortiment{
-        display:grid;
-        width:100vw;
-        max-width:100%;
-        height:100vh;
-    
-        grid-template-areas:
-        'he' 
-        'na' 
-        'nas' 
-        'mas' 
-        'fo';
-        grid-template-rows: 20% 10% 10% auto 20% ;
-        grid-template-columns: 100%;
-    }
-
-    #kontakt{
-        display:grid;
-        width:100vw;
-        max-width:100%;
-        height:100vh;
-
-        grid-template-areas: 
-        "he"
-        "na"
-        "mak"
-        "fo";
-        grid-template-rows: 20% 10% 10% auto 20% ;
-        grid-template-columns: 100%; 
-
-    }
-
-    #catering{
-        display:grid;
-        width:100vw;
-        max-width:100%;
-        height:100vh;
-
-        grid-template-areas: 
-        "he"
-        "na"
-        "mac"
-        "fo";
-        grid-template-rows: 20% 10% 10% auto 20% ;
-        grid-template-columns: 100%; 
-
-    }
-
-    #catering2{
-        display:grid;
-        width:100vw;
-        max-width:100%;
-        height:100vh;
-
-        grid-template-areas: 
-        "he"
-        "na"
-        "mac2"
-        "fo";
-        grid-template-rows: 20% 10% 10% auto 20% ;
-        grid-template-columns: 100%; 
-
-
-    }
-
-
-}
